Update and rename portfolio.html to index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <ul class="navlist">
                 <li><a href="code.html">Home</a></li>
-                <li><a href="portfolio.html" class="active">Portfolio</a></li>
+                <li><a href="index.html" class="active">Portfolio</a></li>
                 <li><a href="skill.html">Skills</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li> 
