--- a/skill.html
+++ b/skill.html
@@ -11,13 +11,13 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <a href="portfolio.html">Prannav</a>
+                <a href="index.html">Prannav</a>
             </div>
             
 
             <ul class="navlist">
                 <li><a href="code.html" >Home</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="index.html">Portfolio</a></li>
                 <li><a href="skill.html"class="active">Skills</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li> 
